# voxelcad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
benchmarks/: benchmark_boolean.py  benchmark_export.py  benchmark_fallback_breaking.py  benchmark_fused_stl.py  benchmark_mesh_method.py  benchmark_render.py  run_benchmarks.py
doc/2022-01-10_Structured_Material_3d_Printing/: README.md  rise.css  talk.css  talk.ipynb
docs/: README.md
docs/architecture/: gpu-design.md  memory-model.md  optimization-system.md  query-planner.md  storage-format.md
docs/developer/: build-system.md  extension-guide.md  testing-strategy.md
docs/tools/: extract_examples.py  render_examples.py
docs/user/: boolean-operations.md  geometry-catalog.md  getting-started.md  performance-guide.md  transforms.md  troubleshooting.md
examples/: README.md  cdt_distance_field_demo.ipynb  gyroid_electrode_support.py  gyroid_electrode_support_plug_conn.py  gyroid_mold.py  gyroid_sponge.py  gyroid_sponge_disks.py  hello_gyroid_sphere.py  hello_gyroid_sphere_spectral.ipynb  ice_cream_cone_demo.ipynb  multi_union_test.py  spectral_analysis_demo.py  transforms_demo.py
examples/gyroid_electrode_support/: gyroid_electrode_support_crimp_conn.py
src/voxelcad/: __init__.py  cube.py  cylinder.py  debug.py  environment.py  errors.py  gyroid_cube.py  sphere.py  voxel_grid.py  voxel_model.py
src/voxelcad/_kernels/: __init__.py  _fused_parallel.pyx  _mc_tables.py  _mc_tables_lewiner.py
src/voxelcad/scripts/: shell.py
src/voxelcad/utils/: pyvista_tools.py  spectral.py
tests/: conftest.py  test_edge_cases.py  test_endian_regression.py  test_export.py  test_fallback_paths.py  test_lazy_csg.py  test_nested_csg_planning.py  test_primitives.py  test_query_planner.py  test_same_grid_boolean.py  test_transforms.py
