[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelcad"
dynamic = ["version"]
description = "Voxel-based CAD tool for 3D design and printing"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Craig Wm. Versek", email = "cversek@gmail.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
viz = ["pyvista", "vtk", "scipy"]
dev = [
    "pytest",
    "pytest-benchmark",
    "cython",
    "pyvista",
]

[project.urls]
Repository = "https://github.com/manny-dev-neurofieldz/voxelcad"
Documentation = "https://github.com/manny-dev-neurofieldz/voxelcad/tree/main/docs"

[project.scripts]
voxelcad_shell = "voxelcad.scripts.shell:main"

[tool.voxelcad]
# Default log level. Override at runtime with VOXELCAD_LOG_LEVEL env var.
# Release branches: "WARNING" (silent). Dev branches: change to "DEBUG".
log_level = "WARNING"

[tool.setuptools.dynamic]
version = {attr = "voxelcad.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
